--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,10 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'androidx.fragment:fragment-ktx:1.2.5'
     implementation 'com.google.android.material:material:1.2.1'
+    //for network request
+    implementation "org.jetbrains.anko:anko-common:0.10.8"
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.3'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.3'
+
 }
