--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.6.3'
     implementation 'com.squareup.retrofit2:converter-gson:2.6.3'
+    //coroutine
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.3"
 
 }
